--- a/index.html
+++ b/index.html
@@ -1,222 +1,93 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Random Restaurant Picker</title>
-    <!-- Global -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/button.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/transition.css">
-    <link rel="stylesheet" href="css/login.css">
-    <!-- Local -->
-    <link rel="stylesheet" href="css/index/index.css">
-    <link rel="stylesheet" href="css/index/form.css">
-    <link rel="stylesheet" href="css/index/banner.css">
-    <!-- Third-party -->
-    <link rel="stylesheet" href="css/third-party/normalize.css">
-    <!-- Google Sign-in -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="758286654746-8e5tr4b5tr0gukbkdjpb6vj6upd9pl6l.apps.googleusercontent.com">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163694684-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163694684-1');
+  </script>
+  
+  <title>Jason Han</title>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Local imports  -->
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/global.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="nav.js"></script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Quicksand|Josefin+Sans:300|Raleway" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+          crossorigin="anonymous"></script>
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="manifest" href="/site.webmanifest">
+
+  <meta name="google-site-verification" content="e3154b0JlWG5O9mAhG2vcxSJsNJctyqbn7azJna1XxQ" />
 </head>
 
 <body>
-    <div data-barba="wrapper">
-        <header class="header">
-            <div class="header-wrapper">
-                <div class="header-external-links" style="transform: translate(0px, 0px);">
-                    <div class="login-button">
-                        <div class="g-signin2" data-onsuccess="onSignIn" id="sign-in"></div>
-                        <div class="account-trigger hide" id="account-menu">
-                            <img class="rounded" id="profile-pic" src="" style="max-width:50px; max-height:50px; width: auto; height: auto;">
-                            <span id="account-name"></span>
-                        </div>
-                    </div>
-                    <div class="menu-trigger" data-component="menu-trigger" onclick="menuToggle()">
-                        <svg viewBox="0 0 50 50" width="50" height="50" class="menu-trigger-shape">
-                            <circle r="25" cx="25" cy="25"></circle>
-                        </svg>
-                        <span class="menu-trigger-bar"></span>
-                        <span class="menu-trigger-bar"></span>
-                        <span class="menu-trigger-bar"></span>
-                    </div>
-                </div>
-            </div>
-            <nav class="header-nav">
-                <div class="menu" data-component="menu">
-                    <div class="menu-overlay" onclick="menuClose()"></div>
-                    <div class="menu-panel" style="transform: translate(110%, 0px);">
-                        <div class="menu-pages">
-                            <ul class="menu-pages-list">
-                                <li id="menu-roulette" class="menu-pages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                    <a class="menu-pages-item-link" href="index.html">
-                                        Restaurant Roulette
-                                    </a>
-                                    <div class="menu-pages-item-subpages menu-subpages">
-                                        <ul class="menu-subpages-list">
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="alert('TODO: implement this!')">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>About</span>
-                                                </a>
-                                            </li>
-                                            <li id="menu-result" class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" href="results.html">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Result</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menu-pages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                    <a class="menu-pages-item-link" href="account-info.html">
-                                        Account
-                                    </a>
-                                    <div class="menu-pages-item-subpages menu-subpages">
-                                        <ul class="menu-subpages-list">
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" href="past-searches.html">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Past searches</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="signOut()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Sign out</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menu-pages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                    <a class="menu-pages-item-link">
-                                        Theme
-                                    </a>
-                                    <div class="menu-pages-item-subpages menu-subpages">
-                                        <ul class="menu-subpages-list">
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme1()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Royal Blue</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme2()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Summer Sky</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme3()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Light Green</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme4()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Yellow Orange</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme5()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Cinnabar</span>
-                                                </a>
-                                            </li>
-                                            <li class="menu-subpages-item" style="opacity: 1; transform: translate(0px, 0px);">
-                                                <a class="menu-subpages-item-link" onclick="theme6()">
-                                                    <div class="menu-subpages-item-link-line"></div>
-                                                    <span>Blue Violet</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <!-- Only data-barba container changes on link navigation -->
-        <div data-barba="container" data-barba-namespace="Restaurant Roulette">
-            <main class="main">
-                <div id="page-container">
-                    <h1 class="search-title">
-                        Restaurant Roulette
-                    </h1>
-                    <div class="page-wrapper font-robo">
-                        <div class="wrapper wrapper--w960">
-                            <div class="card card-2">
-                                <div class="card-body">
-                                    <h2>Your location:</h2>
-                                    <p id="location-container"></p>
-                                    <button class="button--small" onclick="getLocation()">Allow location access</button>
-                                    </br></br></br>
-                                    <form id="randomize-form" action="/query" method="POST">
-                                        <div class="input-group">
-                                            <input class="input--style-2" type="text" name="searchTerms" id="searchTerms">
-                                            <label for="searchTerms">Search terms</label>
-                                            <div class="border"></div>
-                                        </div>
-                                        <div class="row row-space">
-                                            <div class="col-2">
-                                                <input type="radio" id="radius1" name="radius" value="1609" checked>
-                                                <label for="radius1">1 mi.</label>
-                                                <input type="radio" id="radius2" name="radius" value="3218">
-                                                <label for="radius2">2 mi.</label>
-                                                <input type="radio" id="radius3" name="radius" value="4827">
-                                                <label for="radius3">3 mi.</label>
-                                                <input type="radio" id="radius5" name="radius" value="8045">
-                                                <label for="radius5">5 mi.</label>
-                                                <input type="radio" id="radius10" name="radius" value="16090">
-                                                <label for="radius10">10 mi.</label>
-                                            </div>
-                                            <div class="col-2">
-                                                <input type="radio" id="price0" name="priceLevel" value="0" checked>
-                                                <label for="price0">Any</label>
-                                                <input type="radio" id="price1" name="priceLevel" value="1">
-                                                <label for="price1">$</label>
-                                                <input type="radio" id="price2" name="priceLevel" value="2">
-                                                <label for="price2">$$</label>
-                                                <input type="radio" id="price3" name="priceLevel" value="3">
-                                                <label for="price3">$$$</label>
-                                                <input type="radio" id="price4" name="priceLevel" value="4">
-                                                <label for="price4">$$$$</label>
-                                            </div>
-                                        </div>
-                                        <div class="success-banner hidden" id="error"></div>
-                                        <div style="text-align:center">
-                                            <button class="button" type="submit">Randomize</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-            </main>
+  <nav class="navbar">
+    <div class="navbar-wrapper">
+          <span class="navbar-toggle" id="js-navbar-toggle">
+              <i class="fas fa-bars"></i>
+          </span>
+          <a href="index.html" class="logo"><b>Jason Han</b></a>
+          <ul class="main-nav" id="js-menu">
+              <li>
+                  <a href="index.html" class="nav-links">About</a>
+              </li>
+              <li>
+                  <a href="projects.html" class="nav-links">Projects</a>
+              </li>
+              <li>
+                  <a href="resume.html" class="nav-links">Resume</a>
+              </li>
+              <li>
+                  <a href="blog.html" class="nav-links">Blog</a>
+              </li>
+          </ul>
         </div>
-    </div>
-    <div class="transition">
-        <div class="transition-title"></div>
-        <div class="transition-background"></div>
-    </div>
-    <!-- Third-party -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/@barba/core"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
-    <!-- Global -->
-    <script src="js/menu.js"></script>
-    <script src="js/nav.js"></script>
-    <script src="js/theme.js"></script>
-    <script src="js/login.js"></script>
-    <!-- Local -->
-    <script src="js/index/index.js"></script>
-    <script src="js/index/form.js"></script>
-</body>
+      </nav>
+  <div id="wrapper">
 
-</html>
+    <div class="main-content">
+      <img class="me-vert" src="images/alternate-min.jpg"/>
+      <img class="me-horiz" src="images/alternate-min.jpg"/>
+      <div class="main-content-text">
+        <h2 class="hello-text">Hello,</h2>
+        <p>My name is <b>Jason Han</b>. I'm from Jersey City, New Jersey, and I'm a prospective Computer Science / Economics major at Vassar College! My goal is to explore as much as I can in my freshman year and focus on my interests – CS, economics, physics, and tennis, to name a few.</p>
+        <p>If you were directed here from my VSA Senate flyer, I ask that you vote for me for first-year senator! I believe that I am reliable and principled, and I plan to dedicate a generous amount of time to the VSA. I am able to speak up about issues in our community and voice your opinions to the VSA, no matter how unpopular the opinion may be. In high school, I was VP of the Epsilon and Finance Club and an NHS officer, so I am no stranger to the roles of representing my peers.</p>
+        <p>I feel Vassar could use a few more student organizations! If I had the privilege to be a first-year senator, I would join the Organizations Committee to work with anyone interested in starting their very own student organization and hopefully set something up.</p>
+        <p>Feel free to contact me at <a href="mailto:jjhan@vassar.edu">jjhan@vassar.edu</a> or through my Instagram (at the bottom). Feel free to also check out my LinkedIn or my GitHub.</p>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <img class="divider" src="images/divider.png">
+        <div class="links">
+        <span><a href="mailto:jjhan@vassar.edu">Email</a></span>
+        <span>/</span>
+        <span><a href="https://www.linkedin.com/in/jasonhan-vassar/">Linkedin</a></span>
+        <span>/</span>
+        <span><a href="https://github.com/jasonhan-vassar">Github</a></span>
+        <span>/</span>
+        <span><a href="https://www.instagram.com/jason5122/">Instagram</a></span>
+      </div>
+    </footer>
+
+  </div>
+
+
+</body>
